# libaction

./: .gitlab-ci.yml  Doxyfile  README.md  meson.build
demo/: action.cpp  action_missed.cpp  action_motion.cpp  action_score.cpp  action_still.cpp  action_still_score.cpp  meson.build
include/: libaction.h  meson.build
include/libaction/: array.hpp  body_part.hpp  coco_parts.hpp  estimator.hpp  format.hpp  human.hpp  image.hpp  meson.build  part_pair.hpp  process.hpp
include/libaction/detail/: float_binary.hpp  float_bytes.hpp  image.hpp  int_binary.hpp  int_bytes.hpp
include/libaction/motion/detail/: angle.hpp  connections.hpp  fuzz.hpp  zoom.hpp
include/libaction/motion/multi/: data.hpp  deserialize.hpp  serialize.hpp
include/libaction/motion/multi/deserialize/: detail.hpp
include/libaction/motion/multi/serialize/: detail.hpp
include/libaction/motion/single/: anti_crossing.hpp  estimator.hpp  fuzz.hpp  missed_moves.hpp  score.hpp
include/libaction/motion/single/anti_crossing/: detail.hpp
include/libaction/motion/single/fuzz/: detail.hpp
include/libaction/motion/single/missed_moves/: detail.hpp
include/libaction/multi/: body_part.hpp  coco_parts.hpp  estimator.hpp  human.hpp  meson.build  part_pair.hpp
include/libaction/multi/detail/: body_part.hpp  coco_parts.hpp  human.hpp  meson.build  part_pair.hpp
include/libaction/single/: estimator.hpp  meson.build  posenet_parts.hpp
include/libaction/single/detail/: meson.build  posenet_parts.hpp
include/libaction/still/: human.hpp
include/libaction/still/detail/: array.hpp  image.hpp
include/libaction/still/multi/: estimator.hpp
include/libaction/still/multi/detail/: body_part.hpp  coco_parts.hpp  human.hpp  part_pair.hpp
include/libaction/still/single/: anti_cross.hpp  estimator.hpp  score.hpp  zoom.hpp
include/libaction/still/single/detail/: error_reporter.hpp  posenet_parts.hpp
include/libaction/still/single/score/: detail.hpp
include/libaction/still/single/zoom/: detail.hpp
src/: estimator.cpp  estimator.hpp  libaction.cpp  meson.build
tools/: generate_include_guards.py
