install_headers('array.hpp', 'body_part.hpp', 'coco_parts.hpp', 'estimator.hpp',
                'human.hpp', 'image.hpp', 'part_pair.hpp',
                subdir : 'libaction')

pkg.generate(version : '1.0',
             name : 'libaction',
             filebase : 'libaction',
             description : 'Libaction')
